--- a/assets/styles/scss/abstracts/variables/_variables--v2.scss
+++ b/assets/styles/scss/abstracts/variables/_variables--v2.scss
@@ -278,4 +278,7 @@ $card--width: 400px;
 $card--height: 80vh;
 $card--aspect-ratio: auto 9 / 16;
 
+// *  <<--------------------<< Transitions >>-------------------->>
+$transition-link--color: color 0.35s ease;
+
 // *  <<--------------------<< Other >>-------------------->>
