--- a/assets/styles/scss/themes/_light--alt.scss
+++ b/assets/styles/scss/themes/_light--alt.scss
@@ -33,4 +33,7 @@
   );
   @include define-color-hsl(--color-text, 240, 100%, 10%);
   @include define-color-hsl(--color-background, 240, 100%, 98.6%);
+  @include define-color-hsl(--color-primary, 206.6, 95.2%, 16.3%);
+  @include define-color-hsl(--color-secondary, 215, 45.1%, 50%);
+  @include define-color-hsl(--color-tertiary, 35, 44.7%, 49.6%);
 }
