--- a/assets/styles/scss/abstracts/mixins/_components.scss
+++ b/assets/styles/scss/abstracts/mixins/_components.scss
@@ -3,7 +3,7 @@
 // -----------------------------------------------------------------------------
 
 // -  <---------------| Import Component Mixin Partials |--------------->
-// @import 'components/c-box-border';
+@import 'components/c-box-border';
 // @import 'components/c-button';
 @import 'components/c-card';
 @import 'components/c-icon';
