--- a/assets/styles/scss/base/_b-inline-text.scss
+++ b/assets/styles/scss/base/_b-inline-text.scss
@@ -100,7 +100,7 @@ a {
   position: relative;
   display: inline-flex;
   align-self: center;
-  padding: $buffer--xxs $buffer--s;
+  padding: $buffer--xs $buffer--s;
   font-family: 'Roboto Mono', monospace;
   text-decoration: none;
   transition: $transition-link--color;
