--- a/assets/styles/scss/base/_b-sectioning.scss
+++ b/assets/styles/scss/base/_b-sectioning.scss
@@ -11,7 +11,7 @@ nav {
   @include box-dimensions(s);
 
   overflow: hidden;
-  border-radius: $small-dimension--m;
+  border-radius: $small-dimension--s;
 }
 
 // #  <---------------| <article> |--------------->
