--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /* ========================================================================== *\
 +  PARTIAL SCSS GROUP 1 - `abstracts/`
 \* ========================================================================== */
@@ -73,6 +74,71 @@
 }
 
 /* -------------------------------------------------------------------------- *\
+// *  <<--------------------<< BOX BORDER >>-------------------->>
+\* -------------------------------------------------------------------------- */
+.box {
+  width: 100%;
+  height: 100%;
+  padding: null;
+  position: relative;
+  top: 50%;
+  left: 50%;
+  padding: 0.25rem;
+  border: 0.125rem solid var(--color-tertiary);
+  -webkit-transform: translate3d(-50%, -50%, 0);
+          transform: translate3d(-50%, -50%, 0);
+}
+
+.box::before, .box::after {
+  position: absolute;
+  top: 0.25rem;
+  width: 1rem;
+  height: 1rem;
+  border: 0.125rem solid var(--color-tertiary);
+  color: var(--color-tertiary);
+  content: '•';
+  font-size: 1rem;
+  line-height: 0.5625rem;
+  text-align: center;
+}
+
+.box::before {
+  left: 0.25rem;
+}
+
+.box::after {
+  right: 0.25rem;
+}
+
+.box-inner {
+  position: relative;
+  height: 100%;
+  padding: 1rem;
+  border: 0.125rem solid var(--color-tertiary);
+}
+
+.box-inner::before, .box-inner::after {
+  position: absolute;
+  bottom: -0.125rem;
+  width: 1rem;
+  height: 1rem;
+  border: 0.125rem solid var(--color-tertiary);
+  color: var(--color-tertiary);
+  content: '•';
+  font-size: 1rem;
+  line-height: 0.5625rem;
+  text-align: center;
+}
+
+.box-inner::before {
+  left: -0.125rem;
+}
+
+.box-inner::after {
+  right: -0.125rem;
+}
+
+/* -------------------------------------------------------------------------- *\
 // *  <<--------------------<< CARD >>-------------------->>
 \* -------------------------------------------------------------------------- */
 /* -------------------------------------------------------------------------- *\
@@ -87,6 +153,7 @@
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
+  overflow: visible;
   -ms-flex-item-align: center;
       align-self: center;
 }
@@ -99,6 +166,7 @@
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
+  overflow: visible;
   -ms-flex-item-align: center;
       align-self: center;
 }
@@ -180,9 +248,6 @@ html {
 }
 
 body {
-  width: 100%;
-  max-width: 1920px;
-  padding: null;
   display: block;
   margin: 0 auto;
   background-color: var(--color-background);
@@ -241,7 +306,7 @@ nav {
   width: 100%;
   padding: 0.5rem;
   overflow: hidden;
-  border-radius: 16px;
+  border-radius: 8px;
 }
 
 article {
@@ -818,7 +883,7 @@ a {
   display: inline-flex;
   -ms-flex-item-align: center;
       align-self: center;
-  padding: 0.125rem 0.5rem;
+  padding: 0.25rem 0.5rem;
   font-family: 'Roboto Mono', monospace;
   text-decoration: none;
   -webkit-transition: color 0.35s ease;
