dev-main: improving components v4

--- a/assets/styles/css/style-recourses.css
+++ b/assets/styles/css/style-recourses.css
@@ -76,6 +76,10 @@
   width: 100%;
   height: 100%;
   padding: null;
+  -webkit-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  -webkit-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+          box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
   position: relative;
   top: 50%;
   left: 50%;
@@ -104,6 +108,15 @@
 
 .box::after {
   right: 0.25rem;
+}
+
+.box:hover {
+  -webkit-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  -webkit-box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
+          box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
+  -webkit-transform: translate3d(-50%, -50.5%, 0);
+          transform: translate3d(-50%, -50.5%, 0);
 }
 
 .box-inner {
