--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -80,6 +80,10 @@
   width: 100%;
   height: 100%;
   padding: null;
+  -webkit-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  -webkit-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+          box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
   position: relative;
   top: 50%;
   left: 50%;
@@ -108,6 +112,15 @@
 
 .box::after {
   right: 0.25rem;
+}
+
+.box:hover {
+  -webkit-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  -webkit-box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
+          box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
+  -webkit-transform: translate3d(-50%, -50.5%, 0);
+          transform: translate3d(-50%, -50.5%, 0);
 }
 
 .box-inner {
@@ -1868,149 +1881,5 @@ menu {
   --color-tertiary-h: 35;
   --color-tertiary-s: 44.7%;
   --color-tertiary-l: 49.6%;
-}
-
-nav,
-article,
-section,
-aside {
-  outline: 2px double #ff4500;
-}
-
-header,
-footer {
-  outline: 2px double #cd5c5c;
-}
-
-div {
-  outline: 2px dashed #f00;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  outline: 2px double #ff6347;
-}
-
-dl,
-dt,
-dd {
-  outline: calc(1px * 1.5) ridge #00bfff;
-}
-
-figure,
-figcaption {
-  outline: calc(1px * 1.5) ridge #1e90ff;
-}
-
-ol,
-ul,
-li {
-  outline: calc(1px * 1.5) ridge #4682b4;
-}
-
-address,
-blockquote,
-hr,
-p,
-pre {
-  outline: calc(1px * 1.5) ridge #00f;
-}
-
-b,
-code,
-kbd,
-mark,
-samp,
-span,
-strong,
-var {
-  outline: 1px dotted #0f0;
-}
-
-a,
-abbr,
-bdi,
-bdo,
-br,
-cite,
-data,
-dfn,
-q,
-time,
-wbr {
-  outline: 1px dotted #00ff7f;
-}
-
-area,
-audio,
-img,
-map,
-track,
-video {
-  outline: calc(1px * 1.25) ridge #ff0;
-}
-
-embed,
-iframe,
-object,
-param,
-picture,
-source {
-  outline: calc(1px * 1.25) ridge #f0e68c;
-}
-
-svg,
-math {
-  outline: calc(1px * 1.25) ridge #ffd700;
-}
-
-table,
-thead,
-tbody,
-tfoot,
-colgroup,
-tr {
-  outline: calc(1px * 1.5) solid #9932cc;
-}
-
-caption,
-col,
-th,
-td {
-  outline: calc(1px * 1.25) solid #6a5acd;
-}
-
-form,
-datalist,
-fieldset,
-optgroup,
-select {
-  outline: calc(1px * 1.5) solid #008080;
-}
-
-button,
-input,
-label,
-legend,
-meter,
-option,
-output,
-progress,
-textarea {
-  outline: calc(1px * 1.25) solid #40e0d0;
-}
-
-details,
-summary {
-  outline: calc(1px * 1.25) solid #ff1493;
-}
-
-dialog,
-menu {
-  outline: calc(1px * 1.25) solid #ff69b4;
 }
 /*# sourceMappingURL=main.css.map */
