--- a/assets/styles/scss/abstracts/mixins/components/_c-main-header.scss
+++ b/assets/styles/scss/abstracts/mixins/components/_c-main-header.scss
@@ -18,6 +18,7 @@
       @include block-container;
 
       position: fixed;
+      z-index: 1;
       transform: translate3d(0, 0, 0);
       transition: 0.35s all ease;
     }
