--- a/assets/styles/scss/abstracts/mixins/components/_c-card.scss
+++ b/assets/styles/scss/abstracts/mixins/components/_c-card.scss
@@ -5,24 +5,14 @@
 // -  <<----------<< General >>---------->>
 @mixin card {
   @include box-shadow(2);
-  @include box-transition;
 
   overflow: hidden;
-  min-width: calc(#{$large-dimension--xxs} - (#{$large-dimension--xxs} / 10));
-  max-width: calc((#{$large-dimension--l} / 4));
+  // max-width: $large-dimension--xxs + $large-dimension--xxxs;
   aspect-ratio: $card--aspect-ratio;
-  // height: $card--height;
 
   /* Prevent background color leak outs */
   background-clip: padding-box;
-  border-radius: $small-dimension--s;
-
-  @include breakpoint(xs) {
-    min-width: $card--width;
-    height: $card--height;
-    max-height: $card--height;
-    aspect-ratio: $card--aspect-ratio;
-  }
+  border-radius: $small-dimension--m;
 
   &:hover {
     @include box-shadow(5);
