--- a/assets/styles/scss/abstracts/variables/_variables--v2.scss
+++ b/assets/styles/scss/abstracts/variables/_variables--v2.scss
@@ -276,7 +276,7 @@ $button--box-shadow---before: 0 1px 0 2px rgba(0, 0, 0, 0.3),
 // #  Card 1
 $card--width: 400px;
 $card--height: 80vh;
-$card--aspect-ratio: auto 9 / 16;
+$card--aspect-ratio: 9 / 16;
 
 // *  <<--------------------<< Transitions >>-------------------->>
 $transition-link--color: color 0.35s ease;
