--- a/assets/styles/scss/base/_b-sectioning.scss
+++ b/assets/styles/scss/base/_b-sectioning.scss
@@ -47,7 +47,7 @@ footer {
 
 // #  <---------------| <main> |--------------->
 main {
-  @include box-dimensions($margin: $center-me);
+  @include box-dimensions($max-width: $max-width--root, $margin: $center-me);
 }
 
 /* -------------------------------------------------------------------------- *\
