--- a/assets/styles/scss/abstracts/mixins/components/_c-main-header.scss
+++ b/assets/styles/scss/abstracts/mixins/components/_c-main-header.scss
@@ -19,8 +19,19 @@
 
       position: fixed;
       z-index: 1;
+      padding: $buffer--s $buffer--m;
       transform: translate3d(0, 0, 0);
       transition: 0.35s all ease;
+
+      @include breakpoint(xs) {
+        padding-right: $buffer--m + $buffer--s;
+        padding-left: $buffer--m + $buffer--s;
+      }
+
+      @include breakpoint(m) {
+        padding-right: $buffer--l;
+        padding-left: $buffer--l;
+      }
     }
 
     &__container--hidden {
