--- a/assets/styles/scss/abstracts/variables/_variables--v2.scss
+++ b/assets/styles/scss/abstracts/variables/_variables--v2.scss
@@ -279,6 +279,6 @@ $card--height: 80vh;
 $card--aspect-ratio: 9 / 16;
 
 // *  <<--------------------<< Transitions >>-------------------->>
-$transition-link--color: color 0.35s ease;
+$transition--default: all 0.35s ease;
 
 // *  <<--------------------<< Other >>-------------------->>
