--- a/assets/styles/scss/base/_b-root.scss
+++ b/assets/styles/scss/base/_b-root.scss
@@ -9,6 +9,7 @@
   margin: 0;
   // width: 100%;
   // height: auto;
+  // transition: 0.35s all ease;
 }
 
 // #  <---------------| <html> |--------------->
