--- a/assets/styles/scss/base/_b-multimedia.scss
+++ b/assets/styles/scss/base/_b-multimedia.scss
@@ -18,7 +18,7 @@ img {
   color: var(--color-text);
   object-fit: cover;
   object-position: center center;
-  transition: $transition-link--color;
+  transition: $transition--default;
 }
 
 // #  <---------------| <map> |--------------->
@@ -58,10 +58,10 @@ svg {
   fill: var(--color-primary);
   object-fit: cover;
   object-position: center center;
-  transition: $transition-link--color;
+  transition: $transition--default;
 
   path {
-    transition: $transition-link--color;
+    transition: $transition--default;
   }
 }
 
