--- a/assets/styles/scss/abstracts/mixins/components/_c-main-header.scss
+++ b/assets/styles/scss/abstracts/mixins/components/_c-main-header.scss
@@ -17,7 +17,7 @@
 
       @include block-container;
 
-      position: fixed;
+      // position: fixed;
       z-index: 1;
       padding: $buffer--s $buffer--m;
       transform: translate3d(0, 0, 0);
