dev-main: web-homepage v8

--- a/assets/styles/css/style-recourses.css
+++ b/assets/styles/css/style-recourses.css
@@ -185,6 +185,10 @@
   color: var(--color-secondary);
 }
 
+.item-icon {
+  color: var(--color-tertiary);
+}
+
 .fa-heart:hover {
   -webkit-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
   transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
