--- a/assets/styles/scss/abstracts/mixins/components/_c-icon.scss
+++ b/assets/styles/scss/abstracts/mixins/components/_c-icon.scss
@@ -25,6 +25,10 @@
   }
 }
 
+.item-icon {
+  color: var(--color-tertiary);
+}
+
 // -  <<----------<< Specific >>---------->>
 .fa-heart {
   &:hover {
