--- a/assets/styles/scss/abstracts/mixins/components/_c-icon.scss
+++ b/assets/styles/scss/abstracts/mixins/components/_c-icon.scss
@@ -29,6 +29,14 @@
   color: var(--color-tertiary);
 }
 
+.item-icon--btn {
+  color: var(--color-primary);
+
+  &:hover {
+    color: var(--color-text);
+  }
+}
+
 // -  <<----------<< Specific >>---------->>
 .fa-heart {
   &:hover {
